Lesson 3 Singup and Login complete

--- a/view/layout/app.templ
+++ b/view/layout/app.templ
@@ -4,11 +4,15 @@ import "github.com/tjfleming0101/dreampicai/view/ui"
 
 templ App(nav bool) {
 	<!DOCTYPE html>
-	<html lang="en" data-theme="winter">
+	<html lang="en" data-theme="night">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/static/css/output.css"/>
+			<link rel="stylesheet" href="/static/css/fontawesome.min.css"/>
+			<link rel="stylesheet" href="/static/css/regular.min.css"/>
+			<link rel="stylesheet" href="/static/css/solid.min.css"/>
+			<link rel="stylesheet" href="/static/css/brands.min.css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
 			<title>DreamPic AI</title>
 		</head>
