--- a/view/ui/navigation.templ
+++ b/view/ui/navigation.templ
@@ -1,5 +1,9 @@
 package ui
 
+import (
+	"github.com/tjfleming0101/dreampicai/view"
+)
+
 templ Navigation() {
 	<div class="navbar bg-base-100 border-b border-gray-400">
 		<div class="navbar-start">
@@ -20,9 +24,10 @@ templ Navigation() {
 					<li><a>Item 3</a></li>
 				</ul>
 			</div>
-			// 
+			// Logo
 			<a class="text-xl font-black text-primary">DreamPic AI</a>
 		</div>
+		// center Navigation
 		<div class="navbar-center hidden lg:flex">
 			<ul class="menu menu-horizontal px-1">
 				<li><a>Item 1</a></li>
@@ -39,7 +44,27 @@ templ Navigation() {
 			</ul>
 		</div>
 		<div class="navbar-end">
-			<a class="btn">Button</a>
+			if view.AuthenticatedUser(ctx).LoggedIn {
+				<div class="dropdown dropdown-end">
+					<div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+						<div class="w-10 rounded-full">
+							<img alt="Tailwind CSS Navbar component" src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg"/>
+						</div>
+					</div>
+					<ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-72">
+						<li>
+							<a>
+								{ view.AuthenticatedUser(ctx).Email }
+							</a>
+						</li>
+						<li><a>Settings</a></li>
+						<li><a>Logout</a></li>
+					</ul>
+				</div>
+			} else {
+				<a class="btn btn-primary">Login</a>
+				<a class="btn btn-secondary">Register</a>
+			}
 		</div>
 	</div>
 }
