--- a/view/auth/auth.templ
+++ b/view/auth/auth.templ
@@ -123,3 +123,11 @@ templ LoginForm(creds supabase.UserCredentials, errors LoginErrors) {
 		<button type="submit" class="btn btn-secondary w-full">Login<i class="fa-solid fa-arrow-right"></i></button>
 	</form>
 }
+
+templ CallbackScript() {
+	<script>
+		var url = window.location.href
+		var newURL = url.replace("#", "?")
+		window.location = newURL
+	</script>
+}
