--- a/view/ui/navigation.templ
+++ b/view/ui/navigation.templ
@@ -57,7 +57,7 @@ templ Navigation() {
 								{ view.AuthenticatedUser(ctx).Email }
 							</a>
 						</li>
-						<li><a>Settings</a></li>
+						<li><a href="/settings">Settings</a></li>
 						@LogoutForm()
 					</ul>
 				</div>
