--- a/view/auth/auth.templ
+++ b/view/auth/auth.templ
@@ -3,6 +3,41 @@ package auth
 import "github.com/tjfleming0101/dreampicai/view/layout"
 import "github.com/nedpals/supabase-go"
 
+templ AccountSetup() {
+	@layout.App(true) {
+		<div class="max-w-xl bg-base-300 px-6 py-12 w-full mx-auto mt-8 rounded-xl">
+			<h1 class="text-xl font-black mb-8 text-center">Setup Your Account</h1>
+			@AccountSetupForm(AccountSetupParams{}, AccountSetupErrors{})
+		</div>
+	}
+}
+
+type AccountSetupParams struct {
+	Username string
+}
+
+type AccountSetupErrors struct {
+	Username string
+}
+
+templ AccountSetupForm(params AccountSetupParams, errors AccountSetupErrors) {
+	<form hx-post="/account/setup" hx-swap="outerHTML" class="space-y-4" action="">
+		<label class="input input-bordered flex items-center gap-2">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"></path></svg>
+			<div class="label">
+				<span class="label-text">Username</span>
+			</div>
+			<input type="text" name="username" class="grow"/>
+			<div class="label">
+				if len(errors.Username) > 0 {
+					<span class="label-text text-error">{ errors.Username } </span>
+				}
+			</div>
+		</label>
+		<button class="btn btn-primary">Submit</button>
+	</form>
+}
+
 templ Signup() {
 	@layout.App(false) {
 		<div class="flex justify-center mt-[calc(100vh-100vh+8rem)]">
