--- a/view/settings/account.templ
+++ b/view/settings/account.templ
@@ -3,10 +3,70 @@ package settings
 import "github.com/tjfleming0101/dreampicai/view/layout"
 import "github.com/tjfleming0101/dreampicai/types"
 
-templ Index(user types.AuthenticatedUser) {
+type ProfileParams struct {
+	Username string
+	Success  bool
+}
+
+type ProfileErrors struct {
+	Username string
+}
+
+templ Profile(user types.AuthenticatedUser) {
 	@layout.App(true) {
 		<div class="max-w-2xl w-full mx-auto mt-8">
-			Account
+			<div>
+				<h1 class="text-lg font-semibold border-b border-gray-400 pb-2">Profile</h1>
+				@ProfileForm(ProfileParams{Username: user.Account.Username}, ProfileErrors{})
+			</div>
+			<div class="mt-20">
+				<h1 class="text-lg font-semibold border-b border-gray-400 pb-2">Change Password</h1>
+				<div class="sm:grid sm:grid-cols-4 sm:gap-1 sm:px-0 items-center mt-8 space-y-4">
+					<dt class="">Current Password</dt>
+					<dd class="sm:col-span-3 sm:mt-0">
+						<input type="text" class="input input-bordered sm:w-full"/>
+					</dd>
+					<dt class="">New Password</dt>
+					<dd class="sm:col-span-3 sm:mt-0">
+						<input type="text" class="input input-bordered w-full"/>
+					</dd>
+					<dt class="">Confirm Password</dt>
+					<dd class="sm:col-span-3 sm:mt-0">
+						<input type="text" class="input input-bordered w-full"/>
+					</dd>
+					<dt>
+						<dd class="sm:col-end-5 sm:col-span-1 sm:mt-0">
+							<button class="btn btn-primary w-full">Update Password</button>
+						</dd>
+					</dt>
+				</div>
+			</div>
 		</div>
 	}
+}
+
+templ ProfileForm(params ProfileParams, errors ProfileErrors) {
+	<form hx-put="/settings/account/profile" hx-swap="outerHTML">
+		<div class="sm:grid sm:grid-cols-4 sm:gap-1 sm:px-0 items-center mt-8 space-y-4">
+			<dt class="">Username</dt>
+			<dd class="sm:col-span-3 sm:mt-0">
+				if params.Success {
+					<div class="toast toast-end toast-bottom">
+						<div class="alert alert-success">
+							<span>Updated User Successfully</span>
+						</div>
+					</div>
+				}
+				<input type="text" class="input input-bordered w-full" name="username" value={ params.Username }/>
+				if len(errors.Username) > 0 {
+					<span class="label-text text-error">{ errors.Username } </span>
+				}
+			</dd>
+			<dt>
+				<dd class="sm:col-end-5 sm:col-span-1 sm:mt-0">
+					<button class="btn btn-primary w-full">Save</button>
+				</dd>
+			</dt>
+		</div>
+	</form>
 }
