--- a/view/auth/auth.templ
+++ b/view/auth/auth.templ
@@ -22,19 +22,21 @@ type AccountSetupErrors struct {
 
 templ AccountSetupForm(params AccountSetupParams, errors AccountSetupErrors) {
 	<form hx-post="/account/setup" hx-swap="outerHTML" class="space-y-4" action="">
-		<label class="input input-bordered flex items-center gap-2">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"></path></svg>
+		<label class="form-control w-full">
 			<div class="label">
 				<span class="label-text">Username</span>
 			</div>
-			<input type="text" name="username" class="grow"/>
+			<div class="input input-bordered flex items-center gap-2">
+				<i class="fa-solid fa-user"></i>
+				<input type="text" name="username" class="grow"/>
+			</div>
 			<div class="label">
 				if len(errors.Username) > 0 {
 					<span class="label-text text-error">{ errors.Username } </span>
 				}
 			</div>
 		</label>
-		<button class="btn btn-primary">Submit</button>
+		<button class="btn btn-primary w-full">Setup Account<i class="fa-solid fa-arrow-right"></i></button>
 	</form>
 }
 
